# ServerlessBench

./: .gitignore  Mulan_header  NOTICE  README.md  deploy.sh  eval-config  eval.sh  platform-recommendation.md  template.local.env
Testcase1-Resource-efficiency/: README.md  template.yaml
Testcase10-Stateless-costs/: README.md
Testcase11-Real-world-app-emulation/: .gitignore  Dockerfile  README.md  RealWorldAppEmulation.py  __main__.py  action_invoke.sh  action_update.sh  chainlen.py  config.yaml  exec  function  function.c  function.py  invokeResult2.csv  memCDF.csv  memCDFGenerator.py  sampleGenerator.py  sequence_invoke.sh  sequence_update.sh  test.py  utils.py
Testcase12-TP-Transaction/: .gitignore  README.md  template.local.env
Testcase2-Parallel-composition/: README.md  template.yaml
Testcase3-Long-function-chain/: README.md
Testcase4-Application-breakdown/: .gitignore  README.md  deploy.sh  eval.sh  template.local.env
Testcase4-Application-breakdown/online-compiling/src/remote/: Makefile.am  create-gcloud-function.sh  create-openwhisk-function.py
Testcase4-Application-breakdown/online-compiling/src/remote/common/: common.py
Testcase4-Application-breakdown/online-compiling/src/remote/gcloud_function/: main.py
Testcase4-Application-breakdown/online-compiling/src/remote/lambda_function/: main.py
Testcase4-Application-breakdown/online-compiling/src/remote/openwhisk_function/: __main__.py
Testcase8-Function-size/: README.md  aws_pkg20.py  aws_pkg50.py  aws_pkg60.py  aws_pkg80.py  aws_size.py  eval_aws.py
Testcase9-Concurrent-startup/: README.md
(+596 files in other folders)
